deploy/k8s/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - name: radicale
          image: "harbor.k8s.lan/k8s/radicale:14"
          resources: {}
          command: ["docker-entrypoint.sh"]
          args: ["radicale", "--config", "/config/config"]
          ports:
            - containerPort: 5232
              protocol: TCP
          volumeMounts:
            - name: collections
              mountPath: /data/collections
            - name: config
              mountPath: /config/config
              subPath: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
        - name: collections
          persistentVolumeClaim:
            claimName: pvc-nfs-radicale-data
      imagePullSecrets:
        - name: harbor-registry-creds

---
kind: Service
apiVersion: v1
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
spec:
  selector:
    app: radicale
  type: ClusterIP
  ports:
    - name: dav
      targetPort: 5232
      port: 5232

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radicale
  namespace: tools
  labels:
    app: radicale
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: radicale/radicale-basic-auth
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header X-Remote-User $remote_user;
spec:
  ingressClassName: nginx-public
  rules:
    - host: radicale.theautomation.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  number: 5232
  tls:
    - hosts:
        - radicale.theautomation.nl
      secretName: cloudflare-tls
